--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -135,6 +135,7 @@ $small-screen: 480px;
 $more-than-logo-screen: 500px;
 $medium-screen: 640px;
 $nav-breaks: 768px;
+$nav-move-end: 810px;
 $large-screen: 860px;
 $nav-wrap-screen: 950px;
 
